fixed unintended scroll in safari / tweaked spacing

--- a/src/app.scss
+++ b/src/app.scss
@@ -30,7 +30,10 @@ body {
 }
 
 #app {
+  display: grid;
+  grid-template-rows: auto;
   max-width: 1280px;
+  max-height: 1100px;
   margin: 0 auto;
   padding: 0 2rem;
   text-align: center;
